added color change based on time of day, added textarea, update ReadMe, began localstorage process

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="col-3">
           06:00am
         </div>
-        <div class="col-7"><textarea placeholder="Add Appointment Here!" cols="60" rows="3"></textarea>
+        <div class="col-7"><textarea id="time6" placeholder="Add Appointment Here!" cols="60" rows="3"></textarea>
         </div>
         <div class="col-2">
           <input class="btn btn-primary" type="submit" value="Submit">
@@ -46,7 +46,7 @@
         <div class="col-3">
           07:00am
         </div>
-        <div class="col-7"><textarea placeholder="Add Appointment Here!" cols="60" rows="3"></textarea>
+        <div class="col-7"><textarea id="time7" placeholder="Add Appointment Here!" cols="60" rows="3"></textarea>
         </div>
         <div class="col-2">
           <input class="btn btn-primary" type="submit" value="Submit">
@@ -56,7 +56,7 @@
         <div class="col-3">
           08:00am
         </div>
-        <div class="col-7"><textarea placeholder="Add Appointment Here!" cols="60" rows="3"></textarea>
+        <div class="col-7"><textarea id="time8" placeholder="Add Appointment Here!" cols="60" rows="3"></textarea>
         </div>
         <div class="col-2">
           <input class="btn btn-primary" type="submit" value="Submit">
@@ -66,7 +66,7 @@
         <div class="col-3">
           09:00am
         </div>
-        <div class="col-7"><textarea placeholder="Add Appointment Here!" cols="60" rows="3"></textarea>
+        <div class="col-7"><textarea id="time9" placeholder="Add Appointment Here!" cols="60" rows="3"></textarea>
         </div>
         <div class="col-2">
           <input class="btn btn-primary" type="submit" value="Submit">
@@ -76,7 +76,7 @@
         <div class="col-3">
           10:00am
         </div>
-        <div class="col-7"><textarea placeholder="Add Appointment Here!" cols="60" rows="3"></textarea>
+        <div class="col-7"><textarea id="time10" placeholder="Add Appointment Here!" cols="60" rows="3"></textarea>
         </div>
         <div class="col-2">
           <input class="btn btn-primary" type="submit" value="Submit">
@@ -86,7 +86,7 @@
         <div class="col-3">
           11:00am
         </div>
-        <div class="col-7"><textarea placeholder="Add Appointment Here!" cols="60" rows="3"></textarea>
+        <div class="col-7"><textarea id="time11" placeholder="Add Appointment Here!" cols="60" rows="3"></textarea>
         </div>
         <div class="col-2">
           <input class="btn btn-primary" type="submit" value="Submit">
@@ -96,7 +96,7 @@
         <div class="col-3">
           12:00pm
         </div>
-        <div class="col-7"><textarea placeholder="Add Appointment Here!" cols="60" rows="3"></textarea>
+        <div class="col-7"><textarea id="time12" placeholder="Add Appointment Here!" cols="60" rows="3"></textarea>
         </div>
         <div class="col-2">
           <input class="btn btn-primary" type="submit" value="Submit">
@@ -106,7 +106,7 @@
         <div class="col-3">
           13:00pm
         </div>
-        <div class="col-7"><textarea placeholder="Add Appointment Here!" cols="60" rows="3"></textarea>
+        <div class="col-7"><textarea id="time13" placeholder="Add Appointment Here!" cols="60" rows="3"></textarea>
         </div>
         <div class="col-2">
           <input class="btn btn-primary" type="submit" value="Submit">
@@ -116,7 +116,7 @@
         <div class="col-3">
           14:00pm
         </div>
-        <div class="col-7"><textarea placeholder="Add Appointment Here!" cols="60" rows="3"></textarea>
+        <div class="col-7"><textarea id="time14" placeholder="Add Appointment Here!" cols="60" rows="3"></textarea>
         </div>
         <div class="col-2">
           <input class="btn btn-primary" type="submit" value="Submit">
@@ -126,7 +126,7 @@
         <div class="col-3">
           15:00pm
         </div>
-        <div class="col-7"><textarea placeholder="Add Appointment Here!" cols="60" rows="3"></textarea>
+        <div class="col-7"><textarea id="time15" placeholder="Add Appointment Here!" cols="60" rows="3"></textarea>
         </div>
         <div class="col-2">
           <input class="btn btn-primary" type="submit" value="Submit">
@@ -136,7 +136,7 @@
         <div class="col-3">
           16:00pm
         </div>
-        <div class="col-7"><textarea placeholder="Add Appointment Here!" cols="60" rows="3"></textarea>
+        <div class="col-7"><textarea id="time16" placeholder="Add Appointment Here!" cols="60" rows="3"></textarea>
         </div>
         <div class="col-2">
           <input class="btn btn-primary" type="submit" value="Submit">
@@ -146,7 +146,7 @@
         <div class="col-3">
           17:00pm
         </div>
-        <div class="col-7"><textarea placeholder="Add Appointment Here!" cols="60" rows="3"></textarea>
+        <div class="col-7"><textarea id="time17" placeholder="Add Appointment Here!" cols="60" rows="3"></textarea>
         </div>
         <div class="col-2">
           <input class="btn btn-primary" type="submit" value="Submit">
@@ -156,42 +156,13 @@
         <div class="col-3">
           18:00pm
         </div>
-        <div class="col-7"><textarea placeholder="Add Appointment Here!" cols="60" rows="3"></textarea>
+        <div class="col-7"><textarea id="time18" placeholder="Add Appointment Here!" cols="60" rows="3"></textarea>
         </div>
         <div class="col-2">
           <input class="btn btn-primary" type="submit" value="Submit">
        </div>
       </div>
-      <div class="row">
-        <div class="col-3">
-          19:00pm
-        </div>
-        <div class="col-7"><textarea placeholder="Add Appointment Here!" cols="60" rows="3"></textarea>
-        </div>
-        <div class="col-2">
-          <input class="btn btn-primary" type="submit" value="Submit">
-       </div>
-      </div>
-      <div class="row">
-        <div class="col-3">
-          20:00pm
-        </div>
-        <div class="col-7"><textarea placeholder="Add Appointment Here!" cols="60" rows="3"></textarea>
-        </div>
-        <div class="col-2">
-          <input class="btn btn-primary" type="submit" value="Submit">
-       </div>
-      </div>
-      <div class="row">
-        <div class="col-3">
-          21:00pm
-        </div>
-        <div class="col-7"><textarea placeholder="Add Appointment Here!" cols="60" rows="3"></textarea>
-        </div>
-        <div class="col-2">
-          <input class="btn btn-primary" type="submit" value="Submit">
-       </div>
-      </div>
+    </div>
 
 
 
@@ -199,11 +170,6 @@
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script>
-      moment().format('MMMM Do YYYY, h:mm:ss a');
-      console.log(moment().format('MMMM Do YYYY, h:mm:ss a'));
-
-    </script>
 
     <script>
 $( document ).ready(function() {
@@ -214,29 +180,76 @@ $( document ).ready(function() {
 
  var elementArr = document.getElementsByClassName("col-3");
  console.log(elementArr);
-for (var i = 0; i < elementArr.length; i++) {
-  var elText = elementArr[i].innerText;
-  console.log(elText);
-  var elNum = parseInt(elText, 10)
-  console.log("elNum = " + elNum);
+      for (var i = 0; i < elementArr.length; i++) {
+        var elText = elementArr[i].innerText;
+        console.log(elText);
+        var elNum = parseInt(elText, 10)
+        console.log("elNum = " + elNum);
 
-  var t = new Date();
-  var h = t.getHours();
-  console.log("h = " + h);
+        var t = new Date();
+        var h = t.getHours();
+        console.log("h = " + h);
 
-  if (elNum < h) {
-    $(elementArr[i]).addClass("past")
-  } 
-  else if (elNum > h) {
-    $(elementArr[i]).addClass("future")
-  }
-  else {
-    $(elementArr[i]).addClass("present")
-  }
-}
+        if (elNum < h) {
+          $(elementArr[i]).addClass("past")
+        } 
+        else if (elNum > h) {
+          $(elementArr[i]).addClass("future")
+        }
+        else {
+          $(elementArr[i]).addClass("present")
+        }
+      }
+  
+
+  var appointment = document.getElementsByClassName("col-7")
+  console.log(appointment)
+
+  var appoint = document.getElementById("time6")
+  console.log(appoint)
+
+var time1 = document.querySelector("#time1");
+var time2 = document.querySelector("#time2");
+var time3 = document.querySelector("#time3");
+var time4 = document.querySelector("#time4");
+var time5 = document.querySelector("#time5");
+var time6 = document.querySelector("#time6");
+var time7 = document.querySelector("#time7");
+var time8 = document.querySelector("#time8");
+var time9 = document.querySelector("#time9");
+var time10 = document.querySelector("#time10");
+var time11 = document.querySelector("#time11");
+var time12 = document.querySelector("#time12");
+var time13 = document.querySelector("#time13");
+var time14 = document.querySelector("#time14");
+var time16 = document.querySelector("#time15");
+var time17 = document.querySelector("#time16");
+var time18 = document.querySelector("#time17");
 
 
-console.log("done");
+
+  document.getElementsByClassName("btn").addEventListener("click", function (){
+        var user = document.getElementById("user").value ;
+        //localStorage["user"] = user ;
+        localStorage.setItem("user", user) ;
+        alert("gmail id saved") ;
+        console.log("gmail id saved")
+    } , false);
+
+
+
+
+
+  // submit.addEventListener("click", function() {
+  //       var appoint = 
+
+  //   localStorage.setItem("count", count);
+  // });
+
+
+
+
+  console.log("done");
 });
 
   </script>
